--- a/src/Css/Category.css
+++ b/src/Css/Category.css
@@ -48,6 +48,16 @@
 
 .cards {
     width: 100%;
-    height: 100%;
-    /* border: 2px solid green; */
+    height: 150px;
+    border: 2px solid grey;
+
+
+}
+
+.allitems {
+    font-size: 25px;
+    font-weight: 600;
+    color: gray;
+    text-align: center;
+    justify-content: center;
 }
